solve smal bug :D